[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heuristic-learning-benchmark"
version = "0.1.0"
description = "Minimal reproducible benchmark for agent-maintained heuristic control systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=1.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.3",
    "torch>=2.1",
    "huggingface-hub>=0.20",
]

[tool.setuptools]
packages = ["hl_benchmark"]

